resources/scss/theme/_thumbs.scss
/* ... */
@media (max-width: 575px) {

    .thumb-wrap {
        > div {
            &:first-child {
                .thumb {
                    padding-top: 15px;
                    border-top: 1px solid $border;

                    .thumb-img {
                        top: 65px;
                    }
                }
            }
        }
    }

    .thumb .thumb-content .datepicker-input:before {
        display: none;
    }

    .thumb {
        display: flex;
        margin-bottom: 10px;
        padding-bottom: 15px;
        padding-left: 46.065%;
        align-items: flex-start;
        border-bottom: 1px solid $border;
        min-height: 227px;

        .thumb-img {
            left: 0;
            top: 50px;
            bottom: 15px;
            width: 46.065%;
            padding-top: 0;
            border-radius: 0;
            position: absolute;

            img {
                top: 50%;
                left: 50%;
                width: auto;
                max-width: none;
                min-width: 100%;
                min-height: 100%;
                position: absolute;
                transform: translate(-50%, -50%);
            }
        }

        .thumb-content {
            width: 100%;
            padding: 50px 0 0 10px;
            border: none;

            .title {
                top: 0;
                right: 0;
                height: 37px;
                left: -86.065%;
                margin-left: 0;
                position: absolute;
                -webkit-line-clamp: 2;
                width: 132%;
            }

            .stars {
                top: 1px;
                right: 0;
                width: 85px;
                text-align: right;
                position: absolute;

                .text {
                    font-size: 10px;
                    line-height: 10px;
                    display: block;
                }
            }

            .datepicker-placeholder {
                height: 36px;
                padding: 6px 10px;
            }

            .tooltip-wrap {
                z-index: 72;
            }

            > .text {
                margin: 1rem 0;
            }
        }

        .datepicker-input {
            padding-left: 0;
        }

        .thumb-info {
            padding: 0;
            display: flex;
            align-items: center;
            justify-content: space-between;

            .text {
                width: auto;
                font-size: 12px;

                &.thumb-info-time {
                    padding-right: 0;
                    border: none;
                }

                &.thumb-info-people {
                    padding-left: 20px;
                    border-left: 1px solid $border;
                }
            }
        }

        .thumb-price {
            border: none;
            padding-top: 0;
            min-height: 27px;
            margin-bottom: 10px;

            > .text {
                font-size: 0;
                line-height: 0;

                span {
                    margin-left: 0;
                    font-size: 18px;
                    line-height: 20px;
                }

                i {
                    font-size: 10px;
                }
            }
        }
    }

    .discount {
        font-size: 12px;
    }

    .thumb .thumb-img .label,
    .like {
        top: 8px;
    }

    .like {
        left: 0;
        top: auto;
        width: 38px;
        height: 26px;
        right: auto;
        bottom: 22px;
        padding: 8px 5px 8px 8px;
        border-radius: 0 13px 13px 0;

        svg {
            width: 14px;
        }
    }

    .thumb-content {
        .SumoSelect {
            margin-bottom: 0;
        }

        .thumb-info,
        .thumb-price {
            margin-bottom: 5px;
        }
    }
}

@media (max-width: 767px) {
    .item.post .thumb-img {
        top: auto;
        left: auto;
        right: auto;
        bottom: auto;
        width: 100%;
        height: 193px;
        padding-top: 0%;
        position: relative;
        -ms-flex-item-align: start;
        align-self: flex-start;
        border-radius: 3px 3px 0 0;
    }

}

